Changement map et fa icones

--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
                         <p>Du lundi au vendredi de 9h à 12h et de 14h à 19h et le samedi de 9h à 12h.</p>
                         <p>02 40 01 61 69</p>
                         <!-- google map -->
-                        <div class="map" style='overflow:hidden;height:382px;width:600px;'>
+                        <div class="map" style='overflow:hidden;height:100%;width:100%;'>
                             <div id='gmap_canvas' style='height:440px;width:630px;'></div>
                             <div><small><a href="http://embedgooglemaps.com">									google maps carte							</a></small></div>
                             <div><small><a href="http://youtubeembedcode.com">embed youtube</a></small></div>
