--- a/index.html
+++ b/index.html
@@ -227,19 +227,19 @@
 
                     <div class="col-xs-6 col-sm-6 col-md-3 pad-50">
                         <i class="fa fa-5x fa-info-circle"></i>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime.</p>
+                        <p>Color sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime.</p>
                     </div>
                     <div class="col-xs-6 col-sm-6 col-md-3 pad-50">
                         <i class="fa fa-5x fa-stethoscope"></i>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime.</p>
+                        <p>Color sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime.</p>
                     </div>
                     <div class="col-xs-6 col-sm-6 col-md-3 pad-50">
                         <i class="fa fa-5x fa-heart"></i>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime.</p>
+                        <p>Color sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime.</p>
                     </div>
                     <div class="col-xs-6 col-sm-6 col-md-3 pad-50">
                         <i class="fa fa-5x fa-paw"></i>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime.</p>
+                        <p>Color sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime.</p>
                     </div>
                 </section>
 
@@ -255,7 +255,7 @@
 
                     <div class="row1 pad-50">
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset">
+                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset fa-separator">
                             <div class="col-md-12">
                                 <i class="fa fa-stethoscope fa-3x"></i>
                             </div>
@@ -264,7 +264,7 @@
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset">
+                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset fa-separator">
                             <div class="col-md-12">
                                 <i class="fa fa-camera fa-3x"></i>
                             </div>
@@ -274,7 +274,7 @@
                         </div>
                         <!-- bloc 1/6 -->
                         
-                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset">
+                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset fa-separator">
                             <div class="col-md-12">
                                 <i class="fa fa-medkit fa-3x"></i>
                             </div>
@@ -283,7 +283,7 @@
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset">
+                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset fa-separator">
                             <div class="col-md-12">
                                 <i class="fa fa-heartbeat fa-3x"></i>
                             </div>
@@ -292,16 +292,16 @@
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset">
+                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset fa-separator ">
                             <div class="col-md-12">
                                 <i class="fa fa-hospital-o fa-3x"></i>
                             </div>
                             <div class="col-md-12">
-                                <button class="btn typo-btn btn-padding-reset btn-default col-md-12"><a href="#">Hospitalisation</a></button>
+                                <button class="btn typo-btn btn-padding-reset btn-default col-md-12"><a href="#">Hosp.</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset">
+                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset fa-separator">
                             <div class="col-md-12">
                                 <i class="fa fa-paw fa-3x"></i>
                             </div>
