Reglage centrage img XS

--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@
         <header class="row hidden-sm hidden-md hidden-lg">
             <div class="header-corp">
                 <!-- logo -->
-                <div class="logo-img2 center-block "></div>
+                <div class="logo-img2 center-block"></div>
                 <!-- infos du header -->
                 <div class="text-center headerxs">
                     <h1>123 VETO - Clinique Vétérinaire</h1>
                     <h2>Dr Eric Wintz - Dr Aurélie Mayoussier</h2>
-                    <p>De 9h à 12h et de 14h à 19h / samedi de 9h à 12h - 02 40 01 61 69</p>
+                    <div class="headerxs-separator"></div>
+                    <p>De 9h à 12h et de 14h à 19h - samedi de 9h à 12h</p>
                 </div>
             </div>
         </header>
