--- a/conseil.html
+++ b/conseil.html
@@ -188,10 +188,10 @@
 
                     <div id="dent" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-8">
+                        <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
-                        <div class="col-md-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12">
                             <h3><i class="fa fa-user-md"></i> Hygiène dentaire</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
@@ -201,10 +201,10 @@
 
                     <div id="yeux-oreilles" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-6">
+                        <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                         </div>
-                        <div class="col-md-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12">
                             <h3><i class="fa fa-eye"></i> Hygiène des yeux et des oreilles</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
@@ -214,10 +214,10 @@
 
                     <div id="pelage" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-8">
+                        <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
-                        <div class="col-md-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12">
                             <h3><i class="fa fa-paw"></i> Entretien du pelage</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
@@ -227,10 +227,10 @@
 
                     <div id="parasite" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-8">
+                        <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                         </div>
-                        <div class="col-md-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12">
                             <h3><i class="fa fa-bug"></i> Parasites externes et internes</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
@@ -240,10 +240,10 @@
 
                     <div id="vaccin-chien" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-8">
+                        <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
-                        <div class="col-md-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12">
                             <h3><i class="fa fa-plus-square"></i> Pourquoi vacciner votre chien ?</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
@@ -253,10 +253,10 @@
 
                     <div id="vaccin-chat" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-8">
+                        <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                         </div>
-                        <div class="col-md-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12">
                             <h3><i class="fa fa-medkit"></i> Pourquoi vacciner votre chat ?</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
@@ -266,10 +266,10 @@
 
                     <div id="id" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-8">
+                        <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
-                        <div class="col-md-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12">
                             <h3><i class="fa fa-info-circle"></i> Pourquoi et comment faire identifier vos animaux ?</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
@@ -279,10 +279,10 @@
 
                     <div id="education" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-8">
+                        <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
-                        <div class="col-md-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12">
                             <h3><i class="fa fa-book"></i> Éducation</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
