--- a/prestation.html
+++ b/prestation.html
@@ -161,13 +161,13 @@
                     </div>
                 </section>
 
-                <section id="navbar-prestation" class="row espace-footer center-block">
+                <section id="navbar-prestation" class="row center-block">
 
                     <div id="consultation" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
                         <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/Consultation_3.JPG" alt="consultation">
                         </div>
-                        <div class="col-md-8 col-sm-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12 espace-footer">
                             <h3><i class="fa fa-stethoscope"></i> CONSULTATION</h3>
                             <small>À la différence de l'homme, nos compagnons ne parlent pas pendant la consultation, c'est à vous de bien noter les moindres signes ou changements et de nous en faire part.</small>
                             <h4>La consultation vaccinale :</h4>
@@ -188,7 +188,7 @@
                         <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/radiologie_2.JPG" alt="radiologie">
                         </div>
-                        <div class="col-md-8 col-sm-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12 espace-footer">
                             <h3><i class="fa fa-camera"></i> IMAGERIE</h3>
                             <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias.</small>
                             <h4>L'imagerie c'est top !</h4>
@@ -201,7 +201,7 @@
                         <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/Labo_analyse_microscopique.JPG" alt="analyse microscopique">
                         </div>
-                        <div class="col-md-8 col-sm-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12 espace-footer">
                             <h3><i class="fa fa-medkit"></i> Analyse sanguine</h3>
                             <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias.</small>
                             <h4>Les analyses sanguines c'est top !</h4>
@@ -217,7 +217,7 @@
                         <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/chirurgie_1.JPG" alt="salle chirurgie">
                         </div>
-                        <div class="col-md-8 col-sm-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12 espace-footer">
                             <h3><i class="fa fa-heartbeat"></i> CHIRURGIE</h3>
                             <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small>
                             <h4>La chirurgie c'est top !</h4>
@@ -235,7 +235,7 @@
                         <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/Chatterie.JPG" alt="chatterie">
                         </div>
-                        <div class="col-md-8 col-sm-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12 espace-footer">
                             <h3><i class="fa fa-hospital-o"></i> HOSPITALISATION</h3>
                             <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small>
                             <h4>L'hospitalisation c'est top !</h4>
@@ -250,7 +250,7 @@
                         <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-2 col-xs-8">
                             <img class="img-responsive img-circle" src="images/NAC.JPG" alt="hamster">
                         </div>
-                        <div class="col-md-8 col-sm-8 col-xs-12">
+                        <div class="col-md-8 col-sm-8 col-xs-12 espace-footer">
                             <h3><i class="fa fa-paw"></i> NAC</h3>
                             <small>Les nouveaux animaux de compagnies.</small>
                             <h4>Les nacs c'est top !</h4>
