--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </aside>
 
             <!--section équipe-->
-            <div class="part-left col-sm-9 col-md-9 bloc-principal">
+            <div class="part-left col-sm-9 col-md-9">
                 <section class="row">
 
                     <div class="section-header">
