regalge prise RDV

--- a/priserdv.html
+++ b/priserdv.html
@@ -48,7 +48,7 @@
             <h2 id="startchange">PRISE DE RENDEZ-VOUS</h2>
         </div>
 
-        <div class="row pad-50 col-md-offset-2">
+        <div class="row pad-50 col-md-offset-1 col-md-10">
 
             <form class="col-md-5 col-sm-5 col-sm-offset-1">
                 <label for="nom">Prénom et nom :</label>
