Rajout du logo sur aside index

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                 </p>
 
                 <div class="aside-separator"></div>
+                <div class="logo-img-aside img-responsive center-block"></div>
 
             </aside>
 
